<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Dikij_test</string>
    <string android:id="@+id/errorEmail" name="error_email">Email not correct!</string>
    <string android:id="@+id/errorPass" name="error_pass">Password not correct!</string>
    <string android:id="@+id/errorPassLen" name="error_password_len">Password is short</string>
    <string name="signin_string">Sign in</string>
    <string name="back_button">Back</string>
    <string name="send_string">Send</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="messages">Messages:</string>
    <string name="title_chat_screen">Chat Screen</string>
    <string name="title_login_screen">Login Screen</string>

</resources>