<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dikij_test.Chat" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/messages" />

    <ListView
        android:id="@+id/messageHistory"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_marginBottom="10dip"
        android:layout_weight="0.77" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="78dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="top"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/backButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_button" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/send_string" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>